# Synthetic_EEG

./: .gitignore  README.md
EEG_scripts/: Main.m  csp.m  data.m  plotElecPotentialsSingle.m  pyproject.toml
EEG_scripts/eeg_gan/: pyproject.toml
EEG_scripts/eeg_gan/eeg_gan/: data_processing.py  main.py  models.py
EEG_scripts/eeg_gan/trained_models/: autoencoder.pt
EEG_scripts/scripts/: MI_pipeline.py  P300_pipeline.py  P300_pipeline_upsample.py  P300_training.py  RS_analysis.py  eeg_eyes_classification.py  evaluate_classification.py  generate_MI_figures.py  generate_P300_figures.py  nbase.py  plots.py  tl_gan_m.py
EEG_scripts/wgan_gp_project/: GNN.py  P300.py  README.md  Standard-10-20-Cap8.loc  baseline.py  c_MAIN.py  c_plot.py  chart.py  combined_plot.py  csp_scatter.py  main.py  methodology.txt  n_p300.py  nbase.py  npz_to_mat.py  plot_accuracies.py  plot_bci2a_accuracies.py  plot_cho2017_accuracies.py  pyproject.toml  results.py
EEG_scripts/wgan_gp_project/Subject_1_D1T_50trials/: run_log.txt
EEG_scripts/wgan_gp_project/Subject_2_D1T_50trials/: run_log.txt
EEG_scripts/wgan_gp_project/Subject_3_D1T_50trials/: run_log.txt
EEG_scripts/wgan_gp_project/Subject_4_D1T_50trials/: run_log.txt
EEG_scripts/wgan_gp_project/Subject_5_D1T_50trials/: run_log.txt
EEG_scripts/wgan_gp_project/Subject_6_D1T_50trials/: run_log.txt
EEG_scripts/wgan_gp_project/Subject_7_D1T_50trials/: run_log.txt
EEG_scripts/wgan_gp_project/Subject_8_D1T_50trials/: run_log.txt
EEG_scripts/wgan_gp_project/Subject_9_D1T_50trials/: run_log.txt
(+238 files in other folders)
