[tool.poetry]
name = "eeg-cwgan"
version = "0.1.0"
description = "Paradigm-agnostic cWGAN-GP for EEG data augmentation"
authors = ["Sourojit <goswamisourojit@gmail.com>"]
readme = "README.md"
packages = [{ include = "eeg_cwgan", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.23"
scipy = "^1.10"
scikit-learn = "^1.2"
matplotlib = "^3.7"
mne = "^1.4"
pyriemann = "^0.7"
h5py = "^3.14.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
plotly = "^6.1.2"
mlxtend = "^0.23.4"
tensorflow = {extras = ["and-cuda"], version = "^2.20.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
